# wordpack

./: .gitignore  CMakeLists.txt  pack.cpp  pack.h  test.cpp
